force-app/main/default/objects/Big_CSTM_object__b/Big_CSTM_object__b.object-meta.xml
<CustomObject>
    <label>Big CSTM object</label>
    <pluralLabel>Big CSTM objects</pluralLabel>
</CustomObject>