force-app/main/default/objects/Big_CSTM_object__b/fields/Account_Big__c.field-meta.xml
<CustomField>
    <fullName>Account_Big__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Big CSTM objects</relationshipLabel>
    <relationshipName>Big_CSTM_objects</relationshipName>
    <type>Lookup</type>
</CustomField>