force-app/main/default/objects/Big_CSTM_object__b/fields/Contact_Big__c.field-meta.xml
<CustomField>
    <fullName>Contact_Big__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Big CSTM objects</relationshipLabel>
    <relationshipName>Big_CSTM_objects</relationshipName>
    <type>Lookup</type>
</CustomField>